# adjutant-moc

./: .actrc  .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  docker-compose.yaml  requirements.txt  run_adjutant.sh  setup.cfg  setup.py
.github/workflows/: codeql-analysis.yml  main.yaml  release.yaml  test-py37-unit.yaml  test-py38-functional.yaml  test-py38-unit.yaml
adjutant_moc/: exceptions.py  feature_set.py  services.py  settings.py
adjutant_moc/actions/: __init__.py  base.py  mailing_list.py  projects.py  serializers.py  users.py
adjutant_moc/actions/operations/: __init__.py  core.py  projects.py  users.py
adjutant_moc/apis/: __init__.py  base.py  healthcheck.py  projects.py  roles.py  users.py
adjutant_moc/tasks/: __init__.py  projects.py
adjutant_moc/tests/: base.py
adjutant_moc/tests/functional/: README.md  base.py  test_projects.py  test_users.py
adjutant_moc/tests/unit/test_actions/: test_mailing_list.py  test_projects.py  test_users.py
adjutant_moc/tests/unit/test_apis/: test_projects.py  test_roles.py  test_users.py
conf/: README.txt  adjutant-testing-functional.yaml  adjutant-testing-unit.yaml  adjutant.yaml  services.yaml
conf/templates/: moc_create_project_completed.txt  moc_create_project_initial.txt  moc_invite_user_completed.txt  moc_invite_user_token.txt
playbooks/: hosts.sample.ini  site.yaml
playbooks/files/: adjutant-http.conf  adjutant-https.conf  adjutant.yaml  docker-compose.yaml
tools/: run_functional_tests.sh  run_unit_tests.sh
