[metadata]
name = adjutant-moc
author = Mass Open Cloud
author-email = team@lists.massopen.cloud
summary = Onboarding tooling for MOC
description-file = README.md
description-content-type = text/x-md; charset=UTF-8
home-page = https://github.com/CCI-MOC/adjutant-moc
project_urls =
    Bug Tracker = https://github.com/CCI-MOC/adjutant-moc/issues
    Documentation = https://github.com/CCI-MOC/adjutant-moc/wiki
    Source Code = https://github.com/CCI-MOC/adjutant-moc
license = Apache-2
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    setup
    distutils

[files]
packages =
    adjutant_moc

[entry_points]
adjutant.feature_sets =
    moc = adjutant_moc.feature_set:MocOnboardingFeatureSet
